# ferramentum

./: .gitignore  Cargo.toml  README.md  install.sh
arca-tool/: Cargo.toml  README.md
arca-tool/src/: app.rs  artifact.rs  backend.rs  cli.rs  command.rs  config.rs  gcp.rs  main.rs  runtime.rs  ui.rs
arca-tool/src/backend/: rust.rs
calculo/: Cargo.toml
calculo/src/: int.rs  lib.rs  linalg.rs  num.rs  util.rs
clikeys/: Cargo.toml  README.md
clikeys-derive/: Cargo.toml  README.md
clikeys-derive/src/: lib.rs
clikeys/src/: lib.rs
ice-tool/: Cargo.toml  README.md
ice-tool/data/: gpu-catalog.toml
ice-tool/data/provider/aws/: gpu-aliases.toml
ice-tool/data/provider/gcp/: machine-pricing-map.toml
ice-tool/data/provider/vast-ai/: gpu-aliases.toml
ice-tool/src/: app.rs  arca.rs  cache.rs  cli.rs  commands.rs  config_store.rs  gpu.rs  http_retry.rs  local.rs  main.rs  model.rs  provision.rs  remote.rs  support.rs  tests.rs  ui.rs  unpack.rs  workload.rs
ice-tool/src/listing/: mod.rs
ice-tool/src/providers/: aws.rs  catalog.rs  gcp.rs  local.rs  mod.rs  vast.rs
kai-tool/: Cargo.toml  README.md
kai-tool/src/: main.rs
ocular-tool/: Cargo.toml  README.md
ocular-tool/.cargo/: config.toml
ocular-tool/src/: browser.rs  cli.rs  config.rs  error.rs  main.rs  openconnect.rs  shell.rs  ui.rs
syntheon/: Cargo.toml  README.md
syntheon/src/: lib.rs
think-tool/: Cargo.toml  DESIGN.md  README.md
think-tool/src/: agent.rs  app.rs  attach.rs  backend.rs  cli.rs  config.rs  dashboard.rs  git.rs  ids.rs  input.rs  input_history.rs  io.rs  lock.rs  main.rs  maintenance.rs  prompt.rs  provider.rs  runner.rs  selection.rs  session.rs  state.rs  template.rs  terminal_editor.rs  time.rs  transcript.rs  tui_text.rs  ui.rs
think-tool/src/app/: commands.rs  conversation.rs  mod.rs  project.rs  role.rs  runtime.rs  status.rs  terminal.rs
think-tool/src/app/dash/: activity.rs  mod.rs  model.rs  screen.rs  view.rs
think-tool/src/input/: buffer.rs  editor.rs  view.rs
think-tool/src/provider/: codex.rs
think-tool/tests/: cli_smoke.rs
