[workspace]
resolver = "3"
members = [
    "arca-tool",
    "ice-tool",
    "kai-tool",
    "ocular-tool",
]

[workspace.package]
publish = true

[workspace.dependencies]
capulus = "0.1.0"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
dirs = "6"
indicatif = "0.18"
libc = "0.2"
rand = "0.10"
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
webbrowser = "1"
which = "8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
