[package]
name = "arca-tool"
version = "0.1.2"
edition = "2024"
publish.workspace = true
description = "CLI for building and publishing containerized Rust crate artifacts."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/khoek/ferramentum/tree/master/arca-tool"
keywords = ["cli", "containers", "docker", "podman", "gcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "arca"
path = "src/main.rs"

[dependencies]
capulus = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "1"
webbrowser = { workspace = true }
