[package]
name = "clikeys-derive"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Derive macro for clikeys::CliKeys."
readme = "README.md"
repository = "https://github.com/khoek/ferramentum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
