[package]
name = "ice-tool"
version = "0.1.4"
edition = "2024"
publish.workspace = true
description = "CLI for managing cloud VM instances and marketplace offers."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/khoek/ferramentum/tree/master/ice-tool"
keywords = ["cli", "cloud", "vm", "aws", "gcp"]

[[bin]]
name = "ice"
path = "src/main.rs"

[dependencies]
capulus = { workspace = true }

anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { workspace = true }
crossterm = "0.29.0"
csv = "1"
dialoguer = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
names = { version = "0.14", default-features = false }
reqwest = { workspace = true, features = ["blocking", "gzip", "json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
toml = "1.0"
webbrowser = { workspace = true }
