[package]
name = "kai-tool"
version = "0.1.3"
edition = "2024"
publish.workspace = true
description = "CLI helpers for AI coding workflows, file bundling, and git worktree management."
repository = "https://github.com/khoek/ferramentum/tree/master/kai-tool"
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["cli", "git", "worktree", "automation", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kai"
path = "src/main.rs"

[dependencies]
capulus = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
fs2 = "0.4"
indicatif = { workspace = true }
libc = { workspace = true }
pathdiff = "0.2"
rand = { workspace = true }
tempfile = { workspace = true }
walkdir = "2"
which = { workspace = true }
toml = "0.9"
