[package]
name = "ocular-tool"
version = "0.1.2"
edition = "2024"
publish.workspace = true
description = "CLI bridge for SSO authentication with OpenConnect/AnyConnect VPNs"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/khoek/ferramentum/tree/master/ocular-tool"
keywords = ["vpn", "openconnect", "anyconnect", "sso", "cli"]
exclude = [".cargo/**"]
default-run = "ocular"
autobins = false

[[bin]]
name = "ocular"
path = "src/main.rs"

[dependencies]
capulus = { workspace = true }

clap = { workspace = true }
dialoguer = { workspace = true }
headless_chrome = "1"
indicatif = { workspace = true }
libc = { workspace = true }
openconnect-core = { git = "https://github.com/khoek/Openconnect-RS.git", branch = "ocular-peer-cert-der" }
quick-xml = { version = "0.39", features = ["escape-html"] }
reqwest = { workspace = true, features = ["blocking", "cookies", "rustls", "socks"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
sha2 = { workspace = true }
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = { workspace = true }
