[package]
name = "think-tool"
version = "0.1.5"
edition = "2024"
publish.workspace = true
description = "CLI for coordinating persistent agent sessions on complex projects."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/khoek/ferramentum/tree/master/think-tool"
keywords = ["cli", "thinking", "workflow", "llm", "automation"]
categories = ["command-line-utilities", "development-tools", "artificial-intelligence"]

[[bin]]
name = "think"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
libc.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
which.workspace = true

crossterm = "0.29"
jiff = "0.2"
portable-pty = "0.9"
ratatui = "0.30"
shell-words = "1"
toml = "1"
